# Gdungeon

./: .gitignore  CMakeLists.txt  README.md  carddb_create.py  requirements.txt
.github/workflows/: build-documentation.yml  cmake-build-release.yml  cmake-multi-platform.yml
assets/: cards.db
cmake/: FindBreathe.cmake  FindFuro.cmake  FindSphinx.cmake  FindSphinxClick.cmake
docs/: CMakeLists.txt  SPHINX_CONF_IN
docs/source/: Card.rst  Player.rst  carddb.rst  index.rst
include/: arena.hpp  catalog.hpp  classes.hpp  cli.hpp
src/: arena.cpp  card.hpp  catalog.cpp  catalog.hpp  classes.cpp  classes.hpp  cli.cpp  main.cpp
tests/: CMakeLists.txt  addCard.cpp  addPartyMember.cpp  removeCard.cpp  removePartyMember.cpp  tempAddEnemyCard.cpp
